<resources>
    <string name="database_name" translatable="false">B4s3D4t4b4s3N4m3</string>
    <string name="about_me">About me</string>
    <string name="about_my_vehicle">About my vehicle</string>
    <string name="about_text">Copyright © Moving Health 2023</string>
    <string name="about_the_app">About the app</string>
    <string name="accept">Accept</string>
    <string name="accept_privacy">I accept the privacy policy</string>
    <string name="accept_privacy_please">Please accept privacy policy</string>
    <string name="accept_toc">I accept the terms and conditions</string>
    <string name="accept_toc_please">Please give your consent</string>
    <string name="account_not_active">Your account is not currently active, please contact the support for more information or logout and login again.</string>
    <string name="account_settings">Account</string>
    <string name="achieved">Achieved</string>
    <string name="achieved_days">%1$s/7</string>
    <string name="achieved_on">Achieved on</string>
    <string name="action_personal_settings">Personal Settings</string>
    <string name="active_minutes">Active Minutes</string>
    <string name="activities">Activities</string>
    <string name="activities_in_each_day">Activities in each day</string>
    <string name="activity">My Activity</string>
    <string name="activity_active_minute">1 Move Minute</string>
    <string name="activity_active_minutes">%1$s Move Minutes</string>
    <string name="activity_cycling_minute">1 Cycling Minute</string>
    <string name="activity_cycling_minutes">%1$s Cycling Minutes</string>
    <string name="activity_details">%1$s Steps (%2$s M/S)</string>
    <string name="activity_distance_active_minute">1 Move Minute (0 km)</string>
    <string name="activity_distance_active_minutes">%1$s Move Minutes (%2$s km)</string>
    <string name="activity_distance_cycling_minute">1 Cycling Minute (0 km)</string>
    <string name="activity_distance_cycling_minutes">%1$s Cycling Minutes (%2$s km)</string>
    <string name="activity_distance_heart_minute">1 ♥ Minute </string>
    <string name="activity_distance_heart_minutes">%1$s ♥ Minutes </string>
    <string name="activity_distance_vehicle">km distance</string>
    <string name="activity_distance_vehicle_minute">1 Vehicle Minute (0 km)</string>
    <string name="activity_distance_vehicle_minutes">%1$s Vehicle Minutes (%2$s km)</string>
    <string name="activity_heart_minute">1 ♥ Minute</string>
    <string name="activity_heart_minutes">%1$s ♥ Minutes</string>
    <string name="activity_info_one_description">Check your daily activity and see your progress</string>
    <string name="activity_info_one_title">Daily Activity</string>
    <string name="activity_info_two_description">See all of your daily activities and view them on a map</string>
    <string name="activity_info_two_title">Detailed Activity</string>
    <string name="activity_previous_usage">From previous app usage</string>
    <string name="activity_rec_permissions_not_granted">You need to accept the physical activity permission in order to continue</string>
    <string name="activity_rec_permissions_will_not_be_granted">As you have chosen not to allow activity recognition permission, the app will now close. Please uninstall it.</string>
    <string name="activity_step">1 Step</string>
    <string name="activity_steps">%1$s Steps</string>
    <string name="activity_vehicle_minute">1 Vehicle Minute</string>
    <string name="activity_vehicle_minutes">%1$s Vehicle Minutes</string>
    <string name="add">Add</string>
    <string name="add_medicine_details">Add Medicine Details</string>
    <string name="add_medicine_intake">Add Medicine Time</string>
    <string name="add_patient_prescriptions">Manage the prescriptions for your patient</string>
    <string name="battery_settings">Battery Settings</string>
    <string name="consent_form">Your Consent Form</string>
    <string name="contact_us">Contact Us</string>
    <string name="continue_button">Continue</string>
    <string name="disable_restrictions">Unused App Permissions</string>
    <string name="dismiss_patient">Withdraw from Study</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="location_services_title_two">Physical Activity and Location Services</string>
    <string name="participant_information">Participant Information</string>
    <string name="patient_details">Your Details</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_1">Please note: this policy applies only to consumers downloading the app from the app stores. If you are using the app in a professional role as part of one of the associated programmes (e.g. Mobilise-D), the policy may be regulated by the specific programme. You are required to refer to the programme documentation.</string>
    <string name="privacy_policy_10">Your Rights To Delete Your Personal Data</string>
    <string name="privacy_policy_11">If at any time you want to leave the programme and your data to be removed, you can do this from within the app, under Menu > Help > Contact Us and filling the  form specifying that you want your data to be removed from our servers. Please note:  we will only be able to delete your data if you contact us from within the app, as this will provide us with your unique id which is necessary to identify your data in our databases. If you do not use the app to contact us or if you uninstall the app, we will NOT be able to identify your data and hence we will be unable to delete it. Note that if you uninstall the app and then reinstall it, the unique user Id will be different, so we will only be able to identify the data the app has collected after the last installation.</string>
    <string name="privacy_policy_12">Data Security</string>
    <string name="privacy_policy_13">We work hard to keep your data safe. We use a combination of technical, administrative, and physical controls to maintain the security of your data. As a reason of security, data is only transmitted from the phone to our servers and never back. Moreover, we use Transport Layer Security (“TLS”) to encrypt the data. No method of transmitting or storing data is completely secure, however. If you have a security-related concern, please contact us via the Help menu. </string>
    <string name="privacy_policy_14">Who has ethically reviewed the project?</string>
    <string name="privacy_policy_15">This project has been ethically approved via the project coordinators, The University of Sheffield’s Computer Science department’s ethics review procedure. The University’s Research Ethics Committee monitors the application and delivery of the University’s Ethics Review Procedure across the University meeting ethical guidelines for EU research.</string>
    <string name="privacy_policy_16">European Privacy Disclosure</string>
    <string name="privacy_policy_17">If you live in the European Economic Area (EEA), United Kingdom (UK), or Switzerland, please review these additional privacy disclosures under the European Union’s General Data Protection Regulation (GDPR).\nData Controller: is The University of Sheffield, Firth Court, Western Bank, S10 2NT Sheffield, United Kingdom.\nHealth data: we do not ask for any health data, unless you participate in a specific programme. In that case, see the disclosure of the specific programme.\nBasis for processing: For personal data subject to the GDPR, our legal basis is consent and public utility.\nHow to exercise your legal rights: Please see our Terms and Conditions and Sections on your rights above. If you want to access or remove your data, please  contact us via the app via Menu > Help > Contact us for any requests. Please note:  as we keep your data in an anonymous format, we will only be able to identify your data if you contact us from within the app, as this will provide us with your unique id which is necessary to identify your data in our databases. If you do not use the app to contact us or if you uninstall the app, we will NOT be able to identify your data and hence we will be unable to access it or delete it. Note that if you uninstall the app and then reinstall it, the unique user Id will be different, so we will only be able to identify the data the app has collected after the last installation.</string>
    <string name="privacy_policy_18">Contact for further information</string>
    <string name="privacy_policy_19">Please use the app feedback tool. Otherwise use the email address listed on the Google Play/Apple iTunes pages.</string>
    <string name="privacy_policy_2">Information we collect</string>
    <string name="privacy_policy_3">Your location data collected in the background 24/7 (e.g. via sensors like the GPS receiver or the network antenna)\nYour activities parameters such as steps, accelerometer data, etc. collected 24/7\nDaily activities, such as walking, running, etc.\nDepending on the programme you subscribe to, we may ask for\nhealth symptoms, such as having a cough or a temperature\nAge and Gender\nOther self-reported data.\nAll the data is collected anonymously. We do not collect personal identifiable information.\nThe Information that you provide and we collect will be held in accordance with the Data Protection Act 2018 and the EU General Data Protection Regulations (GDPR). Your personal data will be collected and processed for the purpose of modelling.</string>
    <string name="privacy_policy_4">How We Use Your Information</string>
    <string name="privacy_policy_5">Apart from the services offered to you to inform on your personal mobility, we will collate the data to form part of one or more scientific publications and studies which will inform research and policies related to health and wellbeing, computer science, city management, traffic management, defence and other related fields. Individuals personal data will not be identified or released in any report, publication or project output of any kind.\nThe data collected will be retained for the project purposes of scientific analysis. This data may be used in part to undertake scientific analysis which can result in informing public policy, practices, new technology and methodologies as well as supporting the development of new products and services.</string>
    <string name="privacy_policy_6">How Information Is Shared</string>
    <string name="privacy_policy_7">The data will be accessed and analysed by researchers at The University of Sheffield and or other research institutions with a strict ethical code working with The University of Sheffield on specific programmes. We may use some companies or organisations to support us in the management of the data infrastructure. These companies or organisations will access the data for the sole purpose of maintaining the infrastructure and will not be allowed to use the data for any other reasons.\nNo personal data will be released in any form outside the University of Sheffield. Any external researcher accessing the data will have to do so from inside our firewall/premises and will not be allowed to export any data.</string>
    <string name="privacy_policy_8">Data Retention</string>
    <string name="privacy_policy_9">Data held on your phone is deleted when the app is uninstalled. Data held on our server are deleted on explicit request from the user, using the feedback menu of the app. If this is not requested, data will be kept for a maximum period of 20 years. This time period is required because we aim to model mobility phenomena over very long term and hence your data remain useful in the long term.</string>
    <string name="settings">Settings</string>
    <string name="sync_watch">Sync Watch</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="upload_phone_data">Upload Phone Data</string>
</resources>