<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".design.activities.onboarding.PrivacyPolicyActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/privacyLinkContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.active.orbit.baseapp.design.widgets.BaseImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:padding="@dimen/margin_vertical_double"
                android:src="@drawable/ic_full_logo_primary" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/margin_lateral">

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/h3"
                    app:typeface="semibold" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_1"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/h5"
                    app:typeface="regular" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_2"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/h5"
                    app:typeface="semibold" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_3"
                    android:textColor="@color/textColorPrimaryLight"
                    android:textSize="@dimen/h5"
                    app:typeface="regular" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_4"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/h5"
                    app:typeface="semibold" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_5"
                    android:textColor="@color/textColorPrimaryLight"
                    android:textSize="@dimen/h5"
                    app:typeface="regular" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_6"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/h5"
                    app:typeface="semibold" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_7"
                    android:textColor="@color/textColorPrimaryLight"
                    android:textSize="@dimen/h5"
                    app:typeface="regular" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_8"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/h5"
                    app:typeface="semibold" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_9"
                    android:textColor="@color/textColorPrimaryLight"
                    android:textSize="@dimen/h5"
                    app:typeface="regular" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_10"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/h5"
                    app:typeface="semibold" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_11"
                    android:textColor="@color/textColorPrimaryLight"
                    android:textSize="@dimen/h5"
                    app:typeface="regular" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_12"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/h5"
                    app:typeface="semibold" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_13"
                    android:textColor="@color/textColorPrimaryLight"
                    android:textSize="@dimen/h5"
                    app:typeface="regular" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_14"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/h5"
                    android:visibility="gone"
                    app:typeface="semibold" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_15"
                    android:textColor="@color/textColorPrimaryLight"
                    android:textSize="@dimen/h5"
                    android:visibility="gone"
                    app:typeface="regular" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_16"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/h5"
                    app:typeface="semibold" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_17"
                    android:textColor="@color/textColorPrimaryLight"
                    android:textSize="@dimen/h5"
                    app:typeface="regular" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_18"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/h5"
                    app:typeface="semibold" />

                <com.active.orbit.baseapp.design.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/privacy_policy_19"
                    android:textColor="@color/textColorPrimaryLight"
                    android:textSize="@dimen/h5"
                    app:typeface="regular" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <LinearLayout
        android:id="@+id/privacyLinkContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundPanel"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_lateral"
        android:paddingVertical="@dimen/margin_vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.active.orbit.baseapp.design.widgets.BaseTextView
            android:id="@+id/privacyLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/privacy_policy"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/main_text_dimension" />

        <com.active.orbit.baseapp.design.widgets.BaseCheckBox
            android:id="@+id/privacyCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:text="@string/accept_privacy"
            android:textColor="@color/textColorPrimaryDark"
            android:textSize="@dimen/main_text_dimension"
            app:typeface="semibold" />

        <com.active.orbit.baseapp.design.widgets.BaseButton
            android:id="@+id/btnContinue"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:text="@string/continue_button"
            android:textAllCaps="false" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>