<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".design.activities.menu.HelpActivity">


    <com.active.orbit.baseapp.design.widgets.BaseTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_lateral"
        android:layout_marginTop="@dimen/margin_vertical"
        android:gravity="start"
        android:text="@string/help"
        android:textColor="@color/textColorPrimaryDark"
        android:textSize="@dimen/h2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:typeface="bold"
        tools:ignore="NotSibling" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/margin_lateral"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stroke">

                <com.active.orbit.baseapp.design.components.HelpComponent
                    android:id="@+id/menuWhatWeOffer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helpTitle="@string/participant_information" />

                <com.active.orbit.baseapp.design.components.HelpComponent
                    android:id="@+id/menuFaqs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helpTitle="@string/frequently_asked_questions" />

                <com.active.orbit.baseapp.design.components.HelpComponent
                    android:id="@+id/menuTroubleshooting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:helpTitle="@string/troubleshooting" />

                <com.active.orbit.baseapp.design.components.HelpComponent
                    android:id="@+id/menuAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helpTitle="@string/about_the_app" />

                <com.active.orbit.baseapp.design.components.HelpComponent
                    android:id="@+id/menuUploadData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helpTitle="@string/upload_phone_data" />

                <com.active.orbit.baseapp.design.components.HelpComponent
                    android:id="@+id/menuContactUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helpTitle="@string/contact_us" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>