<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".design.activities.menu.SettingsActivity">

    <com.active.orbit.baseapp.design.widgets.BaseTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_lateral"
        android:gravity="start"
        android:text="@string/settings"
        android:textColor="@color/textColorPrimaryDark"
        android:textSize="@dimen/h2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:typeface="bold"
        tools:ignore="NotSibling" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/margin_lateral"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stroke">

                <com.active.orbit.baseapp.design.components.HelpComponent
                    android:id="@+id/patientDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:helpTitle="@string/patient_details" />

                <com.active.orbit.baseapp.design.components.HelpComponent
                    android:id="@+id/locationServices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helpTitle="@string/location_services_title_two" />

                <com.active.orbit.baseapp.design.components.HelpComponent
                    android:id="@+id/batterySettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helpTitle="@string/battery_settings" />

                <com.active.orbit.baseapp.design.components.HelpComponent
                    android:id="@+id/unusedPermissions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helpTitle="@string/disable_restrictions" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>